k8s/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-dev-ingress
  namespace: dev
  annotations:
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "spro-cert"
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: dev.spro.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-service
            port:
              number: 80
