k8s/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-prod-ingress
  namespace: prod
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: spro.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-service
            port:
              number: 80
